delete bloom material

--- a/design-learnings.html
+++ b/design-learnings.html
@@ -57,7 +57,7 @@
 		<!-- ========================= hero-section end ========================= -->
 
 		<!-- ========================= feature-section start ========================= -->
-		<section id="feature" class="feature-section pt-50"">
+		<section id="feature" class="feature-section pt-50">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-lg">
