--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
-		<title>Bloom | Home</title>
+		<title>Juliana Lu | Portfolio</title>
 		<meta name="description" content="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.svg"/>
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="assets/css/tiny-slider.css" />
 		<link rel="stylesheet" href="assets/css/animate.css" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
+		<!-- <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet"> -->
   	</head>
 	<body>
 		<!-- ========================= preloader start ========================= -->
@@ -45,18 +45,17 @@
 						<div class="col-lg-12">
 							<!-- navbar -->
 							<nav class="navbar navbar-expand-lg">
-								<a class="navbar-brand" href="index.html">
-									<img src="assets/img/logo/logo-2-white.svg" alt="Logo-2-White" />
-								</a>
+								<h1 class="navbar-brand section-title" href="index.html" style="color: #fff;" >
+									<!-- <img src="assets/img/favicon.svg" alt="Logo" /> -->
+									JULIANA LU
+								</h1>
 								<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 									<span class="toggler-icon"></span>
 									<span class="toggler-icon"></span>
 									<span class="toggler-icon"></span>
 								</button>
-								<div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
 									<ul id="nav" class="navbar-nav ms-auto">
-										<li class="nav-item"> <a class="page-scroll active" href="index.html">Home</a> </li>
-										<li class="nav-item"> <a class="" href="design-learnings.html">Design Learnings</a> </li>
+										<li class="nav-item"> <a class="page-scroll active" href="index.html">BloomRoom</a> </li>
 									</ul>
 								</div>
 							</nav>
@@ -69,280 +68,34 @@
 
 		<!-- ========================= hero-section start ========================= -->
 		<section id="home" class="hero-section">
-			<div class="container">
-				<div class="row justify-content-center align-items-center">
-					<div class="col-lg-6">
-						<div class="hero-content">
-							<h1 class="wow fadeInUp" data-wow-delay=".2s">
-								Manage chores with your roommates.
-							</h1>
-							<p class="wow fadeInUp" data-wow-delay=".4s">Coordinating chores can be tough and stressful. Bloom makes it fun with gamification! Together with your roommates, grow plants by completing household tasks.
-							</p>
-							<!--<a href="javascript:void(0)" class="main-btn btn-hover wow fadeInUp" data-wow-delay=".6s">Get Started</a> -->
-						</div>
-					</div>
-					<div class="col-xl-4 col-lg-8 col-md-10">
-						<div class="hero-img wow fadeInUp" data-wow-delay=".5s">
-							<img src="assets/img/frames/my-tasks-frame.svg" alt="my tasks frame" class="img-1" style="max-width: 80%">
-						</div>
-					</div>
+			<div class="container" style="padding-top: 3rem;">
+				<div class="row align-items-center">
+                    <div class="hero-content">
+                        <h1 class="wow fadeInUp" data-wow-delay=".2s">
+                            Project: BloomRoom
+                        </h1>
+                    </div>
 				</div>
 			</div>
 		</section>
 		<!-- ========================= hero-section end ========================= -->
 
-		<!-- ==================== progress tracking feature start ===================== -->
-		<section id="progress-feature" class="feature-section pt-50">
+		<!-- ==================== body start ===================== -->
+		 <section id="feature" class="feature-section pt-50">
 			<div class="container">
 				<div class="row justify-content-center">
-					<div class="col-xxl-5 col-xl-6 col-lg-7">
-						<div class="section-title text-center mb-30">
-							<h1 class="mb-25 wow fadeInUp" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-								Progress Tracking
-							</h1>
-							<p class="wow fadeInUp" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
-								Visualize your progress by watching your plant grow.
-							</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="row justify-content-center d-flex align-items-center">
-					<div class="d-flex flex-column align-items-center col-md-4 mb-5">
-						<div class="single-feature">
-							<div class="content">
-								<img
-									src="assets/img/frames/task-progress-1.svg"
-									class="img-1 wow fadeInUp mb-5"
-									data-wow-delay=".1s"
-									style="max-width: 90%;"
-								/>
-								<p>See all of your chores on the home page.</p>
-							</div>
-						</div>
-					</div>
-					<div class="d-flex flex-column align-items-center col-md-4 mb-5">
-						<div class="single-feature">
-							<div class="content">
-								<img
-									src="assets/img/frames/task-progress-2.svg"
-									class="img-1 wow fadeInUp mb-5"
-									data-wow-delay=".1s"
-									style="max-width: 90%;"
-								/>
-								<p>As you complete tasks, your plant will grow.</p>
-							</div>
-						</div>
-					</div>
-					<div class="d-flex flex-column align-items-center col-md-4 mb-5">
-						<div class="single-feature">
-							<div class="content">
-								<img
-									src="assets/img/frames/task-progress-3.svg"
-									class="img-1 wow fadeInUp mb-5"
-									data-wow-delay=".1s"
-									style="max-width: 90%;"
-								/>
-								<p>When all chores are completed, your flower has fully bloomed!</p>
-							</div>
-						</div>
-					</div>
-					<!-- <div class="col-xl-4 col-lg-8 col-md-10">
-						<div class="single-feature text-start">
-							<div class="content">
-								<p>See all your chores on the home page. As you complete tasks, check them off so your flower can grow.</p>
-							</div>
-						</div>
-					</div> -->
-				</div>
-			</div>
-		</section>
-		<!-- ========================= progress tracking end ========================= -->
-
-		<!-- ====================== roommates garden feature start ======================= -->
-		<section id="roommates-garden-feature" class="feature-section pt-50">
-			<div class="container">
-				<div class="row justify-content-center">
-					<div class="col-xxl-5 col-xl-6 col-lg-7">
-						<div class="section-title text-center mb-30">
-							<h1 class="mb-25 wow fadeInUp" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-								Collaborative Effort
-							</h1>
-							<p class="wow fadeInUp" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
-								Work together to grow a group flower and maintain a community garden.
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="row justify-content-center d-flex align-items-center">
-					<div class="col-xl-4 col-lg-8 col-md-10">
-						<div class="single-feature">
-							<div class="content">
-								<img
-									src="assets/img/frames/group-flower-frame.svg"
-									class="img-1 wow fadeInUp"
-									data-wow-delay=".1s"
-									style="max-width: 90%;"
-								/>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-4 col-lg-8 col-md-10">
-						<div class="single-feature text-start">
-							<div class="content wow fadeInUp" data-wow-delay=".2s">
-								<p>In addition to your own plant, share a plant with your roommates! This plant grows according to the total group's task completion rate.</p>
-								<br>
-								<p>Encourage each other to stay on top of tasks so your shared flower can bloom!</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row justify-content-center d-flex align-items-center">
-					<div class="col-xl-4 col-lg-8 col-md-10">
-						<div class="single-feature">
-							<div class="content">
-								<img
-									src="assets/img/frames/roommates-frame.svg"
-									class="img-1 wow fadeInUp"
-									data-wow-delay=".1s"
-									style="max-width: 90%;"
-								/>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-4 col-lg-8 col-md-10">
-						<div class="single-feature text-start">
-							<div class="content wow fadeInUp" data-wow-delay=".2s">
-								<p>Check on your roommates' progress through your shared community garden.</p>
-								<br>
-								<p>Everyone's plant appears in this garden, so you and your friends can motivate each other and hold everyone accountable.</p>
-							</div>
+					<div class="col-lg">
+						<div class="section-title text-center">
+							<h3 class="mb-25 wow fadeInUp" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">This website is under construction.</h3>
+							<p class="mb-5 wow fadeInUp" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp; text-align: center;">
+								Please check back soon!
+                            </p>
+							
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<!-- ========================= roommates garden end ========================= -->
-
-
-		<!-- ====================== schedule tab start ======================= -->
-		<section id="schedule-tab-feature" class="feature-section pt-50">
-			<div class="container">
-				<div class="row justify-content-center">
-					<div class="col-xxl-5 col-xl-6 col-lg-7">
-						<div class="section-title text-center mb-30">
-							<h1 class="mb-25 wow fadeInUp" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-								Schedule
-							</h1>
-							<p class="wow fadeInUp" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
-								Use recurring tasks to keep your chores on a schedule.
-							</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="row justify-content-center d-flex align-items-center">
-					<div class="col-xl-4 col-lg-8 col-md-10">
-						<div class="single-feature">
-							<div class="content">
-								<img
-									src="assets/img/frames/repeating-task-frame.svg"
-									class="img-1 wow fadeInUp"
-									data-wow-delay=".1s"
-									style="max-width: 90%;"
-								/>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-4 col-lg-8 col-md-10">
-						<div class="single-feature">
-							<div class="content">
-								<img
-									src="assets/img/frames/schedule-frame.svg"
-									class="img-1 wow fadeInUp"
-									data-wow-delay=".1s"
-									style="max-width: 90%;"
-								/>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-4 col-lg-8 col-md-10">
-						<div class="single-feature text-start">
-							<div class="content wow fadeInUp" data-wow-delay=".2s">
-								<p>Set tasks to repeat on specific days of the week and assign them to people in your household.</p>
-								<br>
-								<p>Bloom will automaticaly schedule these tasks and delegate them to assignees!</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- ========================= schedule tab end ========================= -->
-
-		<!-- ====================== manage users start ======================= -->
-		<section id="schedule-tab-feature" class="feature-section pt-50">
-			<div class="container">
-				<div class="row justify-content-center">
-					<div class="col-xxl-5 col-xl-6 col-lg-7">
-						<div class="section-title text-center mb-30">
-							<h1 class="mb-25 wow fadeInUp" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-								Manage Users
-							</h1>
-							<p class="wow fadeInUp" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
-								Edit your profile and add or remove people from your roommate group.
-							</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="row justify-content-center d-flex align-items-center">
-					<div class="col-xl-4 col-lg-8 col-md-10">
-						<div class="single-feature">
-							<div class="content">
-								<img
-									src="assets/img/frames/profile-frame.svg"
-									class="img-1 wow fadeInUp"
-									data-wow-delay=".1s"
-									style="max-width: 90%;"
-								/>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-4 col-lg-8 col-md-10">
-						<div class="single-feature">
-							<div class="content">
-								<img
-									src="assets/img/frames/manage-group-frame.svg"
-									class="img-1 wow fadeInUp"
-									data-wow-delay=".1s"
-									style="max-width: 90%;"
-								/>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-4 col-lg-8 col-md-10">
-						<div class="single-feature text-start">
-							<div class="content wow fadeInUp" data-wow-delay=".2s">
-								<p>Update your profile information on the Profile screen.</p> <br>
-								<p>Find a new roommate? Someone moved out? No worries! Add people by sharing an invite link, and remove people in the Group Settings menu.</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- ========================= manage users end ========================= -->		
-
-		<!-- ========================= footer start ========================= -->
-		<footer id="footer" class="pt-40">
-			<img
-				src="assets/img/footer/flowers-footer.svg"
-				style="max-width: 35%;"
-				class="mt-5"
-			/>
-		</footer>
-		<!-- ========================= footer end ========================= -->
 
 		<!-- ========================= scroll-top ========================= -->
 		<a href="#" class="scroll-top btn-hover">
