update screen images

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 		<link rel="stylesheet" href="assets/css/tiny-slider.css" />
 		<link rel="stylesheet" href="assets/css/animate.css" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!-- <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet"> -->
   	</head>
 	<body>
 		<!-- ========================= preloader start ========================= -->
@@ -47,7 +46,7 @@
 							<nav class="navbar navbar-expand-lg">
 								<h1 class="navbar-brand section-title nav-item" href="index.html" id="logo">
 									<!-- <img src="assets/img/favicon.svg" alt="Logo" /> -->
-									JULIANA LU
+									JL
 								</h1>
 								<!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 									<span class="toggler-icon"></span>
@@ -55,7 +54,7 @@
 									<span class="toggler-icon"></span>
 								</button> -->
 								<ul id="nav" class="navbar-nav ms-auto">
-									<li class="nav-item"> <a class="page-scroll active" href="index.html">BloomRoom</a> </li>
+									<li class="nav-item"> <a class="" href="index.html">Projects</a> </li>
 								</ul>
 								</div>
 							</nav>
@@ -81,12 +80,15 @@
 		<!-- ========================= hero-section end ========================= -->
 
 		<!-- ==================== body start ===================== -->
-		<section id="body" class="body-section pt-15">
+		<section id="body" class="body-section pt-50">
 			<div class="container">
 				<div class="row justify-content-center">
-					<div class="col-lg">
+					<div class="col-lg-8">
 						<div class="section-title text-center">
-							<h2 class="mb-25 wow fadeInUp" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">⚠️ This website is under construction.</h2>
+							<div class="wow fadeInUp" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+								<span style="margin: 0 5px"><h2> ⚠️ </h2></span>
+								<span><h2>This website is under construction.</h2></span> 
+							</div>
 							<!-- <p class="mb-5 wow fadeInUp" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp; text-align: center;">
 								Please check back soon!
 							</p> -->
@@ -95,10 +97,11 @@
 				</div>
 				<div class="row justify-content-center">
 					<div class="col-lg-8">
-						<div class="feature-item text-center mb-30 wow fadeInUp" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+						<div class="text-center mb-25 wow fadeInUp" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
 							<p style="margin-bottom: 5px;">BloomRoom is a chore tracking app for multi-person households.</p>
 							<p>Check back soon for the complete writeup.</p>
 						</div>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -219,7 +222,7 @@
 					<div class="col-md-6 col-lg-3">
 						<div class="frame-item">
 							<p class="frame-caption">Members Settings</p>
-							<img src="assets/img/frames/manage members.svg" alt="Manage Members" class="img-fluid">
+							<img src="assets/img/frames/settings-members.svg" alt="Manage Members" class="img-fluid">
 						</div>
 					</div>
 				</div>
@@ -228,7 +231,6 @@
 
 		<!-- ========================= scroll-top ========================= -->
 		<a href="#" class="scroll-top btn-hover">
-			<!-- <i class="lni lni-chevron-up"></i> -->
 			<span>⇧</span>
 		</a>
 
