--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				<div class="row justify-content-center">
 					<div class="col-lg-8">
 						<div class="text-center mb-25 wow fadeInUp" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-							<p style="margin-bottom: 5px;">BloomRoom is a chore tracking app for multi-person households.</p>
+							<p style="margin-bottom: 5px;">BloomRoom is a chore tracking mobile app for multi-person households.</p>
 							<p>Check back soon for the complete writeup.</p>
 						</div>
 					</div>
